# Laitner

./: .gitignore  game.py  main.py  pyproject.toml
btn/: lesson.py  load.py
components/btns/: button.py  ok.py
components/cards/: card.py  notremember.py  remember.py  stack.py
components/dialog/: dialog.py
components/sprites/: drag.py
core/: button.py  color.py  event.py  exception.py  file.py  game.py  lesson.py  texts.py  type.py  utils.py
examples/: base.txt  error.txt
